k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: ghcr.io/ikkyusan193/p2-test/backend:latest
        imagePullPolicy: Always
      imagePullSecrets:
      - name: dockerconfigjson-secret
