k8s/worker-extract-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-extract
  labels:
    app: worker-extract
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker-extract
  template:
    metadata:
      labels:
        app: worker-extract
    spec:
      containers:
      - name: worker-extract
        image: ghcr.io/cs-muic/scalable-p2-scalable-t3-ikkyusan193/worker:latest
        imagePullPolicy: Always
      imagePullSecrets:
      - name: dockerconfigjson-secret
