k8s/worker-log-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-log
  labels:
    app: worker-log
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker-log
  template:
    metadata:
      labels:
        app: worker-log
    spec:
      containers:
      - name: worker-log
        image: ghcr.io/ikkyusan193/p2-test/worker:latest
        imagePullPolicy: Always
      imagePullSecrets:
      - name: dockerconfigjson-secret
