k8s/backend-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: backend
spec:
  selector:
    app: backend
  type:  ClusterIP
  ports:
    - port:  80
      targetPort:  5000
      protocol: TCP #default
