k8s/frontend-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: frontend
spec:
  selector:
    app: frontend
  type:  ClusterIP
  ports:
    - port:  80
      targetPort:  8080
      protocol: TCP #default
