k8s/minio-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: minio
  name: minio # This name uniquely identifies the service
  namespace: default  
spec:
  selector:
    # Looks for labels `app:minio` in the namespace and applies the spec
    app: minio
  type:  ClusterIP  
  ports:
  - name: http
    port: 9000
    # targetPort: 9000
    # protocol: TCP
  - name: console
    port: 9090
    # targetPort: 9090
    # protocol: TCP
