k8s/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: redis
  name: my-redis-svc
  namespace: default
spec:
  selector:
    app: redis
  type: ClusterIP  
  ports:
  - name: redis
    port: 6379
    targetPort: 6379
    protocol: TCP
