k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: '/api'
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 80
      - path: '/'
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
      - path: '/minio'
        pathType: Prefix
        backend:
          service:
            name: minio
            port:
              number: 80
